--- a/stylesLandingPage.css
+++ b/stylesLandingPage.css
@@ -56,7 +56,7 @@ body, h1, h2, p, ul, li, a {
   }
 
   .hero {
-    height: 100vh; /* Full viewport height */
+    height: 100vh;
     background: url('images/landingPageSteak.webp') no-repeat center center/cover;
     display: flex;
     justify-content: center;
