--- a/style-aboutUs.css
+++ b/style-aboutUs.css
@@ -25,7 +25,7 @@ div.hover_parent {
     margin:20px;
     position: relative;
     height:auto;
-    background-image: url(AU_steak_bg.png);
+    background-image: url("images/AU_steak_bg.png");
     border: 5px solid;}
 
 /* Styles the image to be of a certain size. Height is set to auto to scale with webpage zoom and format */
