--- a/Dinnermenu.css
+++ b/Dinnermenu.css
@@ -25,7 +25,7 @@ body {
 /* Individual Menu Section */
 .menu-section {
     flex: 1;
-    background: #2a2a2a;
+    background: #1B2A41;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -34,8 +34,8 @@ body {
 
 /* Menu Section Title */
 .menu-section h1 {
+    color: #F04419; /* Bright Red for Heading */
     font-size: 28px;
-    color: #ee0505; /* Red color */
     text-transform: uppercase;
     margin-bottom: 20px;
     text-align: center;
@@ -55,7 +55,9 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     margin: 0;
-    color: #fa1616;
+    color: #e9e9e9;
+    background-color: #6B0F1A; /*Dark Red Background */
+
 }
 
 /* Menu Item Description */
@@ -77,7 +79,7 @@ body {
 
 /* Black Box Section */
 .student-discount-box {
-    background-color: #2a2a2a;
+    background-color: #1B2A41;
     color: #e1e1e1;
     padding: 20px;
     margin-top: 20px;
@@ -88,7 +90,7 @@ body {
 
 .student-discount-box h2 {
     font-size: 24px;
-    color: #ee0505; /* Red for heading */
+    color: #F04419; /* Bright Red for heading */
     margin-bottom: 10px;
     text-transform: uppercase;
 }
@@ -112,7 +114,7 @@ body {
 /* Subheader Style */
 .menu-subheader {
     font-size: 22px;
-    color: #e2d6d6; /* Red color */
+    color: #F04419; /* Bright Red color */
     text-transform: uppercase;
     margin: 30px 0 10px;
     border-bottom: 1px solid #f6f6f6;
@@ -120,3 +122,9 @@ body {
     text-align: left;
 }
 
+/* Used Colors
+Orange: #F04419
+Black: #0C1821
+Dark Red: #6B0F1A
+Light Blue: #978CA6
+Dark Blue #1B2A41*/
